# serde-encrypt

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  pull-request.yml  release.yml
serde-encrypt/: Cargo.toml
serde-encrypt-core/: Cargo.toml
serde-encrypt-core/src/: encrypt.rs  error.rs  key.rs  lib.rs  msg.rs  random.rs
serde-encrypt-core/src/encrypt/: encrypted_message.rs  plain_message_public_key.rs  plain_message_shared_key.rs  plain_message_shared_key_deterministic.rs
serde-encrypt-core/src/encrypt/plain_message_shared_key/: shared_key_core.rs  shared_key_deterministic_core.rs
serde-encrypt-core/src/key/: as_shared_key.rs  combined_key.rs  key_pair.rs  shared_key_core.rs
serde-encrypt-core/src/key/key_pair/: private_key.rs  public_key.rs
serde-encrypt-core/tests/: feat_serde_encrypt_std_error.rs  feat_shared_key_distribution.rs
serde-encrypt-core/tests/test_util/: mod.rs
serde-encrypt-core/tests/test_util/random/: mod.rs
serde-encrypt-sgx/: Cargo.toml
serde-encrypt-sgx/src/: encrypt.rs  key.rs  lib.rs  random.rs  serialize.rs  shared_key.rs  traits.rs
serde-encrypt-sgx/src/encrypt/: plain_message_public_key.rs  plain_message_shared_key.rs
serde-encrypt-sgx/src/key/: key_pair.rs
serde-encrypt-sgx/src/serialize/: impls.rs
serde-encrypt-sgx/src/traits/: serde_encrypt_public_key.rs  serde_encrypt_shared_key.rs
serde-encrypt-sgx/tests/: example_serde_encrypt_shared_key_encryption_with_key_exchange.rs
serde-encrypt/src/: encrypt.rs  key.rs  lib.rs  random.rs  serialize.rs  shared_key.rs  traits.rs
serde-encrypt/src/encrypt/: plain_message_public_key.rs  plain_message_shared_key.rs  plain_message_shared_key_deterministic.rs
serde-encrypt/src/key/: key_pair.rs
serde-encrypt/src/key/key_pair/: public_key.rs
serde-encrypt/src/serialize/: impls.rs
serde-encrypt/src/serialize/impls/: bincode_serializer.rs  cbor.rs  cbor_serializer.rs  postcard_serializer.rs
serde-encrypt/src/traits/: impl_detail.rs  serde_encrypt_public_key.rs  serde_encrypt_shared_key.rs  serde_encrypt_shared_key_deterministic.rs
serde-encrypt/src/traits/impl_detail/: serialize.rs
serde-encrypt/tests/: example_serde_encrypt_public_key_owned_data.rs  example_serde_encrypt_public_key_struct_with_reference.rs  example_serde_encrypt_shared_key_encryption_with_key_exchange.rs  example_serde_encrypt_shared_key_owned_data.rs  feat_different_cipher_from_same_plain.rs  feat_large_message.rs  feat_nostd.rs  feat_same_cipher_from_same_plain.rs  feat_serde_encrypt_std_error.rs  feat_serde_types.rs  feat_serializers.rs  feat_std_serializers.rs  unit_plain_message_public_key.rs  unit_plain_message_xxx_key.rs
serde-encrypt/tests/test_util/: mod.rs
serde-encrypt/tests/test_util/serde_encrypt_public_key/: mod.rs
serde-encrypt/tests/test_util/serde_encrypt_shared_key/: mod.rs
src/: error.rs  key.rs  lib.rs  msg.rs  random.rs  traits.rs
src/error/: error_kind.rs
src/key/: combined_key.rs  key_pair.rs  shared_key.rs
src/key/key_pair/: private_key.rs  public_key.rs
src/traits/: impl_detail.rs  serde_encrypt_public_key.rs  serde_encrypt_shared_key.rs
src/traits/impl_detail/: nonce.rs  serialize.rs  serialized_plain.rs
tests/: example_serde_encrypt_public_key.rs  example_serde_encrypt_public_key_owned_data.rs  example_serde_encrypt_public_key_struct_with_reference.rs  example_serde_encrypt_shared_key_encryption_with_key_exchange.rs  example_serde_encrypt_shared_key_owned_data.rs  feat_different_cipher_from_same_plain.rs  feat_nostd.rs  feat_serde_encrypt_public_key_different_cipher_from_same_plain.rs  feat_serde_encrypt_public_key_message_types.rs  feat_serde_encrypt_public_key_nostd.rs  feat_serde_encrypt_std_error.rs  feat_serde_types.rs  feat_shared_key_distribution.rs  serde_encrypt.rs
tests/test_util/: mod.rs
tests/test_util/serde_encrypt_public_key/: mod.rs
tests/test_util/serde_encrypt_shared_key/: mod.rs
