[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "serde-encrypt"
version = "0.1.0"

[dependencies]
chacha20poly1305 = {version = "0.8", default-features = false, features = ["alloc", "xchacha20poly1305"]}
crypto_box = {version = "0.6"}

rand_chacha = {version = "0.3", default_features = false}

serde = {version = "1.0", default-features = false}
serde_cbor = {version = "0.11", default_features = false, features = ["alloc"]}

spin = {version = "0.9", default-features = false, features = ["spin_mutex", "lazy"]}

[dev-dependencies]
serde = {version = "1.0", default-features = false, features = ["derive", "alloc"]}# alloc for Vec, String
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
serde_repr = "0.1"

pretty_assertions = "0.7"

void = "1.0"

[features]
default = ["std"]
std = [
  "chacha20poly1305/std",
  "rand_chacha/std",
  "serde/std",
  "serde_cbor/std",
  "spin/std",
]
