[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
categories = ["no-std", "cryptography", "encoding"]
description = "Encrypts all the Serialize"
documentation = "https://docs.rs/serde-encrypt"
edition = "2018"
keywords = ["libsodium", "xsalsa20poly1305", "x25519", "sgx", "serde-encrypt"] # up to 5 keywords, each keyword should have <= 20 chars
license = "MIT OR Apache-2.0"
name = "serde-encrypt-sgx"
readme = "../README.md"
repository = "https://github.com/laysakura/serde-encrypt"
version = "0.2.0"

[dependencies]
serde-encrypt-core = {path = "../serde-encrypt-core", default-features = false}

serde = {git = "https://github.com/mesalock-linux/serde-sgx.git", default-features = false}
serde_cbor = {git = "https://github.com/mesalock-linux/cbor-sgx.git", default-features = false, features = ["alloc"]}

[dev-dependencies]
serde = {git = "https://github.com/mesalock-linux/serde-sgx.git", default-features = false, eatures = ["derive", "alloc"]}# alloc for Vec, String

pretty_assertions = "0.7"
