[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
categories = ["no-std", "cryptography", "encoding"]
description = "Encrypts all the Serialize"
documentation = "https://docs.rs/serde-encrypt"
edition = "2018"
keywords = ["libsodium", "xsalsa20poly1305", "x25519", "sgx", "serde-encrypt"] # up to 5 keywords, each keyword should have <= 20 chars
license = "MIT OR Apache-2.0"
name = "serde-encrypt-sgx"
readme = "../README.md"
repository = "https://github.com/laysakura/serde-encrypt"
version = "0.3.2"

[dependencies]
serde-encrypt-core = {version = "0.3.2", path = "../serde-encrypt-core", default-features = false}

sgx_tstd = {rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}

serde = {git = "https://github.com/mesalock-linux/serde-sgx.git", features = ["derive"]}
serde_cbor = {git = "https://github.com/mesalock-linux/cbor-sgx.git"}

rand_chacha = {version = "0.3", default-features = false}
rand_core = {version = "0.6", default-features = false, features = ["getrandom"]}# from_entropy()

once_cell = {git = "https://github.com/mesalock-linux/once_cell-sgx"}
